Finished About Me layout, fixed alignment of navbar links, added heading and links to content page

--- a/style.css
+++ b/style.css
@@ -6,3 +6,8 @@
 .otherBackground {
     background-image:url("./tree_picture2.png")
 }
+
+/*Move Navbar links to the right of the page.*/
+.linksRight {
+    justify-content: flex-;
+}
